📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15878,5 +15878,101 @@
         "published": "Tue, 16 Dec 2025 13:33:25 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46288291\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/indias-digantara-raises-50m-for-space-based-missile-defence-tech/",
+        "title": "India\u2019s Digantara raises $50M for space-based missile defence tech",
+        "link": "https://techcrunch.com/2025/12/16/indias-digantara-raises-50m-for-space-based-missile-defence-tech/",
+        "published": "Tue, 16 Dec 2025 14:44:11 +0000",
+        "source": "TechCrunch",
+        "summary": "With this funding, Digantara has raised $64.5 million in total."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/databricks-raises-4b-at-134b-valuation-as-its-ai-business-heats-up/",
+        "title": "Databricks raises $4B at $134B valuation as its AI business heats up",
+        "link": "https://techcrunch.com/2025/12/16/databricks-raises-4b-at-134b-valuation-as-its-ai-business-heats-up/",
+        "published": "Tue, 16 Dec 2025 14:39:20 +0000",
+        "source": "TechCrunch",
+        "summary": "The data intelligence company has just raised more than $4 billion in a Series L funding round at a $134 billion valuation \u2014 up 34% from the $100 billion valuation that it achieved just three months ago."
+    },
+    {
+        "id": "https://www.theverge.com/tech/844673/amazon-kindle-scribe-colorsoft-review-ereader-eink-tablet",
+        "title": "Amazon&#8217;s Kindle Scribe Colorsoft won&#8217;t replace your notebook \u2014 or your Kindle",
+        "link": "https://www.theverge.com/tech/844673/amazon-kindle-scribe-colorsoft-review-ereader-eink-tablet",
+        "published": "2025-12-16T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I wanted to love Amazon's $630 Kindle Scribe Colorsoft. It has everything I covet. An E Ink display with front lighting and color. A pressure-sensitive stylus. The ability to take notes and annotate my existing library of ebooks. A distinct lack of distracting apps. And, for a certain type of person, this is the sweet [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/holiday-meal-kits-2025/",
+        "title": "The Best Holiday Delivery Meal Kits (2025)",
+        "link": "https://www.wired.com/story/holiday-meal-kits-2025/",
+        "published": "Tue, 16 Dec 2025 15:01:00 +0000",
+        "source": "WIRED",
+        "summary": "Christmas can be daunting. Meal kit boxes from Sunbasket and Blue Apron offer the satisfaction of making a home-cooked feast with a lot less stress."
+    },
+    {
+        "id": "https://www.engadget.com/deals/apples-mac-mini-m4-is-back-on-sale-for-a-record-low-price-150041509.html?src=rss",
+        "title": "Apple's Mac mini M4 is back on sale for a record-low price",
+        "link": "https://www.engadget.com/deals/apples-mac-mini-m4-is-back-on-sale-for-a-record-low-price-150041509.html?src=rss",
+        "published": "Tue, 16 Dec 2025 15:00:42 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're still debating what <a href=\"https://www.engadget.com/the-best-christmas-gift-ideas-everyone-on-your-2025-holiday-shopping-list-will-love-170018978.html\">gifts to get the important people</a> in your life, sales can be a good starting point. Take <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0DLBTPDCS&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=a4b87d1c-bb4f-4033-b906-fff96c9cb"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/paypal-applies-to-become-a-bank-under-trumps-looser-financial-rules-143025772.html?src=rss",
+        "title": "PayPal applies to become a bank under Trump's looser financial rules",
+        "link": "https://www.engadget.com/big-tech/paypal-applies-to-become-a-bank-under-trumps-looser-financial-rules-143025772.html?src=rss",
+        "published": "Tue, 16 Dec 2025 14:30:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a href=\"https://www.engadget.com/apps/google-wallets-paypal-integration-is-ending-this-june-133045777.html\">PayPal</a> is the latest company looking to become a bank in the US. On Monday, the <a href=\"https://newsroom.paypal-corp.com/2025-12-15-PayPal-Submits-Applications-to-Establish-an-Industrial-Bank-to-Expand-Access-to-Financial-Services-for-U-S-Small-Businesses\">company announced</a> it had submitted applications for PayPal Bank to the Federal Deposit Insurance Corporation (FDIC) and th"
+    },
+    {
+        "id": "https://gizmodo.com/the-u-s-might-finally-approve-a-sunscreen-ingredient-the-worlds-been-using-for-decades-2000700009",
+        "title": "The U.S. Might Finally Approve a Sunscreen Ingredient the World\u2019s Been Using for Decades",
+        "link": "https://gizmodo.com/the-u-s-might-finally-approve-a-sunscreen-ingredient-the-worlds-been-using-for-decades-2000700009",
+        "published": "Tue, 16 Dec 2025 15:05:03 +0000",
+        "source": "Gizmodo",
+        "summary": "The FDA has proposed adding bemotrizinol to the list of approved active ingredients for sunscreens."
+    },
+    {
+        "id": "https://gizmodo.com/the-elephant-adult-swim-review-cartoon-network-2000698360",
+        "title": "\u2018The Elephant\u2019 Delivers a Blissfully Playful Collaboration From Cartoon Network Legends",
+        "link": "https://gizmodo.com/the-elephant-adult-swim-review-cartoon-network-2000698360",
+        "published": "Tue, 16 Dec 2025 14:30:51 +0000",
+        "source": "Gizmodo",
+        "summary": "The creators of 'Adventure Time,' 'Steven Universe,' 'Over the Garden Wall,' and 'OK K.O! Let's Be Heroes' make an experimental three-act special."
+    },
+    {
+        "id": "https://readwrite.com/utah-property-manager-defrauded-over-2-million-to-support-gambling-habits/",
+        "title": "Utah property manager defrauded over $2 million to support gambling habits",
+        "link": "https://readwrite.com/utah-property-manager-defrauded-over-2-million-to-support-gambling-habits/",
+        "published": "Tue, 16 Dec 2025 13:37:30 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Blake Floyd Cozzens. Utah property manager defrauded over $2 million to support gambling habits\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Blake-Floyd-Cozzens-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A property manager in Utah has been sentenced to 25 months&#8217; imprisonment for defrauding over $2 million to support his&#8230; <a class=\"more-link\" h"
+    },
+    {
+        "id": "https://www.zdnet.com/article/top-holiday-scams-how-to-protect-yourself/",
+        "title": "Beware of 'gift card draining' and two other top holiday scams, US Treasury warns",
+        "link": "https://www.zdnet.com/article/top-holiday-scams-how-to-protect-yourself/",
+        "published": "Tue, 16 Dec 2025 14:44:00 GMT",
+        "source": "Latest news",
+        "summary": "Here's how to spot the most common scams this holiday season, before it's too late. Plus, tips to protect yourself."
+    },
+    {
+        "id": "https://www.zdnet.com/article/favorite-laptop-accessories/",
+        "title": "12+ laptop accessories that I swear by (and how they've improved my productivity)",
+        "link": "https://www.zdnet.com/article/favorite-laptop-accessories/",
+        "published": "Tue, 16 Dec 2025 14:29:00 GMT",
+        "source": "Latest news",
+        "summary": "These devices and gadgets can elevate your standard laptop setup - and you won't have to spend a fortune."
+    },
+    {
+        "id": "https://vilgot-huhn.github.io/mywebsite/posts/20251206_p_circle_lindley/",
+        "title": "I don't think Lindley's paradox supports p-circling",
+        "link": "https://vilgot-huhn.github.io/mywebsite/posts/20251206_p_circle_lindley/",
+        "published": "Tue, 16 Dec 2025 13:40:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46288351\">Comments</a>"
     }
 ]
