📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15974,5 +15974,197 @@
         "published": "Tue, 16 Dec 2025 13:40:02 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46288351\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/canadian-peer-to-peer-clothing-rental-company-rax-is-expanding-to-the-u-s/",
+        "title": "Canadian peer-to-Peer clothing rental company Rax is expanding to the U.S.",
+        "link": "https://techcrunch.com/2025/12/16/canadian-peer-to-peer-clothing-rental-company-rax-is-expanding-to-the-u-s/",
+        "published": "Tue, 16 Dec 2025 16:11:16 +0000",
+        "source": "TechCrunch",
+        "summary": "Rax is a peer-to-peer clothing rental company that won top consumer pitch at Disrupt this year."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/instagram-brings-reels-to-the-big-screen-starting-with-amazon-fire-tv/",
+        "title": "Instagram brings Reels to the big screen, starting with Amazon Fire TV",
+        "link": "https://techcrunch.com/2025/12/16/instagram-brings-reels-to-the-big-screen-starting-with-amazon-fire-tv/",
+        "published": "Tue, 16 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "By bringing Reels to TVs, Instagram can better compete with YouTube, which largely dominates the TV space."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/apple-tv-adds-support-for-google-cast-even-as-netflix-ditches-the-feature/",
+        "title": "Apple TV adds support for Google Cast even as Netflix ditches the feature",
+        "link": "https://techcrunch.com/2025/12/16/apple-tv-adds-support-for-google-cast-even-as-netflix-ditches-the-feature/",
+        "published": "Tue, 16 Dec 2025 15:45:54 +0000",
+        "source": "TechCrunch",
+        "summary": "The tech giant's adoption of Google Cast signals its interest in making Apple TV a more competitive streaming service at a time when the market is seeing increased consolidation."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/hacking-group-says-its-extorting-pornhub-after-stealing-users-viewing-data/",
+        "title": "Hacking group says it\u2019s extorting Pornhub after stealing users\u2019 viewing data",
+        "link": "https://techcrunch.com/2025/12/16/hacking-group-says-its-extorting-pornhub-after-stealing-users-viewing-data/",
+        "published": "Tue, 16 Dec 2025 15:41:13 +0000",
+        "source": "TechCrunch",
+        "summary": "The Scattered Lapsus$ Hunters hacking collective stole Pornhub premium users\u2019 data, including email addresses and viewing history."
+    },
+    {
+        "id": "https://www.theverge.com/news/845124/instagram-reels-tv-app",
+        "title": "Instagram is putting Reels on your TV",
+        "link": "https://www.theverge.com/news/845124/instagram-reels-tv-app",
+        "published": "2025-12-16T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Meta is starting to test a new Instagram app for TVs that lets you watch Reels on a big screen. The app will be available first as a pilot for Amazon Fire TV devices in the US starting Tuesday. The homescreen of the Reels-focused app will show personalized, horizontal collections of videos to browse through. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845307/netflix-iheartmedia-video-podcasts",
+        "title": "My Favorite Murder and The Breakfast Club podcasts are ditching YouTube for Netflix",
+        "link": "https://www.theverge.com/news/845307/netflix-iheartmedia-video-podcasts",
+        "published": "2025-12-16T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Netflix is plowing ahead with plans to build out a library of video podcasts as it aims to keep viewers locked into the service even when they may not be watching what's on their screens. On Tuesday, Netflix announced that it's teaming up with radio giant iHeartMedia to add more than 15 video podcasts to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845400/texas-tv-makers-lawsuit-samsung-sony-lg-hisense-tcl-spying",
+        "title": "Texas is suing all of the big TV makers for spying on what you watch",
+        "link": "https://www.theverge.com/news/845400/texas-tv-makers-lawsuit-samsung-sony-lg-hisense-tcl-spying",
+        "published": "2025-12-16T10:38:15-05:00",
+        "source": "The Verge",
+        "summary": "Texas is suing five of the biggest TV makers, accusing them of \"secretly recording what consumers watch in their own homes.\" In separate lawsuits filed on Tuesday, Texas Attorney General Ken Paxton claims the TVs made by Sony, Samsung, LG, Hisense, and TCL are part of a \"mass surveillance system\" that uses Automatic Content Recognition [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/2026-mercedes-cla-first-drive-entry-level-doesnt-mean-basic/",
+        "title": "2026 Mercedes CLA first drive: Entry level doesn\u2019t mean basic",
+        "link": "https://arstechnica.com/cars/2025/12/2026-mercedes-cla-first-drive-entry-level-doesnt-mean-basic/",
+        "published": "Tue, 16 Dec 2025 15:38:57 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Starting at $47,250, Mercedes' new electric sedan is quite compelling."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-board-games-to-gift-and-play-with-the-family-for-the-2025-holiday-season-125529223.html?src=rss",
+        "title": "The best board games to gift and play with the family for the 2025 holiday season",
+        "link": "https://www.engadget.com/the-best-board-games-to-gift-and-play-with-the-family-for-the-2025-holiday-season-125529223.html?src=rss",
+        "published": "Tue, 16 Dec 2025 16:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Once upon a time, a &quot;board game&quot; meant <em>Monopoly </em>or <em>Risk</em>. Then several brave souls dared to ask the question: &quot;What if this was fun?&quot; Thirty years later, we're blessed with tabletop games that challenge our minds, immerse us in other worlds and conjure good times with those we love \u2014 sometimes all three at once. For your gift-buying needs, we've put together a list of new favorites and returning classics that run the gamuts of genre and weight. If you're r"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/instagram-launches-a-fire-tv-app-for-reels-160003710.html?src=rss",
+        "title": "Instagram launches a Fire TV app for Reels",
+        "link": "https://www.engadget.com/social-media/instagram-launches-a-fire-tv-app-for-reels-160003710.html?src=rss",
+        "published": "Tue, 16 Dec 2025 16:00:03 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Have you ever just wished you could watch Instagram Reels right on a TV? Maybe? Well, if so, you're in luck. Meta has launched an Instagram app exclusively on Fire TV. It will be solely for &quot;short-form video content,&quot; so Reels. <a href=\"https://www.engadget.com/tiktok-fire-tv-app-202229014.html\">TikTok launched an app</a> on Fire TV in 2020 before <a href=\"https://www.engadget.com/tiktok-tv-app-google-tv-samsung-lg-smart-tv-065700895.html\">rolling it out</a> to other platforms.&nbsp"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/amazon-is-set-to-lay-off-370-workers-at-its-european-hq-154037845.html?src=rss",
+        "title": "Amazon is set to lay off 370 workers at its European HQ",
+        "link": "https://www.engadget.com/big-tech/amazon-is-set-to-lay-off-370-workers-at-its-european-hq-154037845.html?src=rss",
+        "published": "Tue, 16 Dec 2025 15:40:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/big-tech/amazon-reportedly-considering-ending-ties-with-the-us-postal-service-144555021.html\" target=\"_blank\">Amazon</a> is set to fire 370 people at its European headquarters in Luxembourg in the coming weeks, as <em>Bloomberg </em>reports. That accounts for about 8.5 percent of the workforce. Amazon initially planned to reduce its headcount there by 470, but under European Union law, companies have to negotiate layoffs with employee reps and, i"
+    },
+    {
+        "id": "https://gizmodo.com/steven-spielberg-ufo-movie-trailer-disclosure-day-2000700220",
+        "title": "The First Trailer for Steven Spielberg\u2019s Mystery UFO Movie Is Finally Here",
+        "link": "https://gizmodo.com/steven-spielberg-ufo-movie-trailer-disclosure-day-2000700220",
+        "published": "Tue, 16 Dec 2025 16:12:54 +0000",
+        "source": "Gizmodo",
+        "summary": "'Disclosure Day' stars Emily Blunt, Josh O'Connor, and Colin Firth as they prepare the world for the truth that's out there."
+    },
+    {
+        "id": "https://gizmodo.com/nasas-maven-spacecraft-may-actually-be-lost-in-space-2000700204",
+        "title": "NASA\u2019s MAVEN Spacecraft May Actually Be Lost in Space",
+        "link": "https://gizmodo.com/nasas-maven-spacecraft-may-actually-be-lost-in-space-2000700204",
+        "published": "Tue, 16 Dec 2025 16:00:21 +0000",
+        "source": "Gizmodo",
+        "summary": "This could be the end of the orbiter that studies the Red Planet\u2019s atmosphere and relays communications between NASA and its Mars rovers."
+    },
+    {
+        "id": "https://gizmodo.com/foldable-iphone-might-be-small-2000700170",
+        "title": "The Foldable iPhone Might Be \u2018Small\u2019",
+        "link": "https://gizmodo.com/foldable-iphone-might-be-small-2000700170",
+        "published": "Tue, 16 Dec 2025 15:54:33 +0000",
+        "source": "Gizmodo",
+        "summary": "A new leak claims Apple's book-style foldable iPhone slated for 2026 could be smaller than an iPhone 17 Pro when closed."
+    },
+    {
+        "id": "https://mashable.com/article/pornhub-premium-hack-what-was-stolen",
+        "title": "PornHub Premium hacked. This is the info they reportedly stole.",
+        "link": "https://mashable.com/article/pornhub-premium-hack-what-was-stolen",
+        "published": "Tue, 16 Dec 2025 15:30:57 +0000",
+        "source": "Mashable",
+        "summary": "Some very sensitive info about Pornhub Premium members was reportedly stolen."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-oral-b-io-electric-toothbrush-deal",
+        "title": "Rock a pearly white smile with $50 off the Oral-B iO Electric Toothbrush",
+        "link": "https://mashable.com/article/dec-16-oral-b-io-electric-toothbrush-deal",
+        "published": "Tue, 16 Dec 2025 15:23:33 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 16, get the Oral-B iO Electric Toothbrush for $50 off at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-roborock-saros-10r-deal",
+        "title": "Black Friday is back: The Roborock Saros 10R is on sale for a record-low price at Amazon",
+        "link": "https://mashable.com/article/dec-16-roborock-saros-10r-deal",
+        "published": "Tue, 16 Dec 2025 15:18:19 +0000",
+        "source": "Mashable",
+        "summary": "The Roborock Saros 10R is on sale at Amazon for $999.99, down from the normal price of $1,599.99. That's a 38% discount."
+    },
+    {
+        "id": "https://www.zdnet.com/article/my-favorite-linux-package-managers/",
+        "title": "I've tried nearly every Linux package manager - these remain my favorite",
+        "link": "https://www.zdnet.com/article/my-favorite-linux-package-managers/",
+        "published": "Tue, 16 Dec 2025 16:11:18 GMT",
+        "source": "Latest news",
+        "summary": "I've used Linux for decades. Here are my go-to package managers and why."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-use-call-screen-ios-26/",
+        "title": "The iPhone's new call screening feature makes updating to iOS 26 totally worth it for me",
+        "link": "https://www.zdnet.com/article/how-to-use-call-screen-ios-26/",
+        "published": "Tue, 16 Dec 2025 16:00:00 GMT",
+        "source": "Latest news",
+        "summary": "An automated voice can screen your calls by asking for the caller's name and reason, which you can then decide whether to pick up or not."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-run-macos-ipad/",
+        "title": "How I turn my iPad into a touchscreen MacBook on the road (and what extra accessories I use)",
+        "link": "https://www.zdnet.com/article/how-to-run-macos-ipad/",
+        "published": "Tue, 16 Dec 2025 15:45:00 GMT",
+        "source": "Latest news",
+        "summary": "This is how I continue to work on my iPad when Wi-Fi, power, and the best travel plans fall apart."
+    },
+    {
+        "id": "https://www.zdnet.com/article/useful-google-docs-features/",
+        "title": "These 10+ useful Google Docs tools streamlined my workflow (and don't require plug-ins)",
+        "link": "https://www.zdnet.com/article/useful-google-docs-features/",
+        "published": "Tue, 16 Dec 2025 15:31:00 GMT",
+        "source": "Latest news",
+        "summary": "From editable PDFs to instant translations, Google Docs is packed with features that most people overlook."
+    },
+    {
+        "id": "https://github.com/cmontella/purrtran",
+        "title": "Purrtran \u2013 \u14da\u160f\u15e2 \u2013 A Programming Language for Cat People",
+        "link": "https://github.com/cmontella/purrtran",
+        "published": "Sat, 13 Dec 2025 18:02:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46256504\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/what-ai-search-tools-mean-for-the-future-of-seo-specialists/",
+        "title": "What AI search tools mean for the future of SEO specialists",
+        "link": "https://www.artificialintelligence-news.com/news/what-ai-search-tools-mean-for-the-future-of-seo-specialists/",
+        "published": "Tue, 16 Dec 2025 15:49:59 +0000",
+        "source": "AI News",
+        "summary": "<p>AI search engines and generative AI tools are certainly transforming how people discover information online. Far from making SEO specialists obsolete, the shift highlights clearly why skilled human optimisers remain more important than ever. As generative AI search tools reshape the digital landscape, many wonder whether traditional SEO has reached the end. Despite AI&#8217;s growing [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/what-ai-search-tools-mean-"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/16/1125899/creating-psychological-safety-in-the-ai-era/",
+        "title": "Creating psychological safety in the AI era",
+        "link": "https://www.technologyreview.com/2025/12/16/1125899/creating-psychological-safety-in-the-ai-era/",
+        "published": "Tue, 16 Dec 2025 15:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Rolling out enterprise-grade AI means climbing two steep cliffs at once. First, understanding and implementing the tech itself. And second, creating the cultural conditions where employees can maximize its value. While the technical hurdles are signi\ufb01cant, the human element can be even more consequential; fear and ambiguity can stall momentum of even the most promising&#8230;"
     }
 ]
