📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -16166,5 +16166,149 @@
         "published": "Tue, 16 Dec 2025 15:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "Rolling out enterprise-grade AI means climbing two steep cliffs at once. First, understanding and implementing the tech itself. And second, creating the cultural conditions where employees can maximize its value. While the technical hurdles are signi\ufb01cant, the human element can be even more consequential; fear and ambiguity can stall momentum of even the most promising&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/netflix-doubles-down-on-video-podcasts-with-iheartmedia-deal/",
+        "title": "Netflix doubles down on video podcasts with iHeartMedia deal",
+        "link": "https://techcrunch.com/2025/12/16/netflix-doubles-down-on-video-podcasts-with-iheartmedia-deal/",
+        "published": "Tue, 16 Dec 2025 17:13:24 +0000",
+        "source": "TechCrunch",
+        "summary": "Netflix's has its second big foray into video podcasts with its new partnership with iHeartMedia."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/845459/disclosure-day-spielberg-trailer-release-date",
+        "title": "Disclosure Day\u2019s first trailer teases close encounters of a different kind",
+        "link": "https://www.theverge.com/entertainment/845459/disclosure-day-spielberg-trailer-release-date",
+        "published": "2025-12-16T12:06:57-05:00",
+        "source": "The Verge",
+        "summary": "The first trailer for Steven Spielberg's upcoming film Disclosure Day is here, and it will leave you with more questions than answers about what exactly is going on. There is no denying that something strange is happening to a Kansas City newscaster (Emily Blunt) who goes into a strange trance on-air in Disclosure Day's new [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845447/retro-games-the-quickshot-ii-joystick-controller-commodore-64",
+        "title": "An iconic joystick from the Commodore 64 era is returning",
+        "link": "https://www.theverge.com/news/845447/retro-games-the-quickshot-ii-joystick-controller-commodore-64",
+        "published": "2025-12-16T11:45:04-05:00",
+        "source": "The Verge",
+        "summary": "Retro Games, a company known for its upgraded revivals of iconic '80s and '90s era computers, including the Commodore 64 and Amiga, has announced that it's bringing back another accessory from the same era. If you grew up gaming before the NES hit the US, you were probably using (or drooling over) the Quickshot II. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/845198/prediction-markets-mcp-vergecast",
+        "title": "Everything is gambling now",
+        "link": "https://www.theverge.com/podcast/845198/prediction-markets-mcp-vergecast",
+        "published": "2025-12-16T11:29:32-05:00",
+        "source": "The Verge",
+        "summary": "Here's a list of things you can bet on, right this second. This year's Super Bowl winner, sure. The winner of Survivor season 49, okay. But the number of gifts Santa will deliver this year? The number of tweets Elon Musk will send in the next 7 days? How much money Avatar: Fire and Ash [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/home/what-happened-to-irobot-can-happen-to-anyone-164500625.html?src=rss",
+        "title": "What happened to iRobot can happen to anyone",
+        "link": "https://www.engadget.com/home/what-happened-to-irobot-can-happen-to-anyone-164500625.html?src=rss",
+        "published": "Tue, 16 Dec 2025 16:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The company which popularized robot vacuum cleaners around the world has <a class=\"link\" href=\"https://www.engadget.com/home/irobot-has-filed-for-bankruptcy-and-may-be-taken-over-by-its-primary-supplier-091602257.html\" target=\"_blank\">filed for Chapter 11 bankruptcy</a>. iRobot, makers of the Roomba, has been synonymous with the category since its inception, but its star had dulled in recent years. The company plans to sell its assets to its primary supplier, China\u2019s Picea Robotics, in the ho"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/dead-island-3-is-in-development-and-will-reportedly-come-out-in-2028-162522680.html?src=rss",
+        "title": "Dead Island 3 is in development and will reportedly come out in 2028",
+        "link": "https://www.engadget.com/gaming/dead-island-3-is-in-development-and-will-reportedly-come-out-in-2028-162522680.html?src=rss",
+        "published": "Tue, 16 Dec 2025 16:25:23 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The zombie-decapitating sim <em>Dead Island 3</em> is still being developed, according to financial documents from Dambuster Studios that were <a href=\"https://x.com/bogorad222/status/2000827597106896907/photo/1\"><ins>published on X</ins></a> and reported on by <a href=\"https://www.videogameschronicle.com/news/dead-island-3-is-in-development-and-targeting-a-2028-release-financial-docs-reveal/\"><em><ins>Video Games Chronicle</ins></em></a>. These documents suggest a 2028 release date, so that'"
+    },
+    {
+        "id": "https://gizmodo.com/mighty-nein-episode-7-clip-pumat-sol-2000694107",
+        "title": "Go Shopping With the Mighty Nein in This Magical Clip (Exclusive)",
+        "link": "https://gizmodo.com/mighty-nein-episode-7-clip-pumat-sol-2000694107",
+        "published": "Tue, 16 Dec 2025 17:00:16 +0000",
+        "source": "Gizmodo",
+        "summary": "Get a look at what's coming in this week's 'Mighty Nein' episode 'Belonging,' and the animated debut of a beloved character."
+    },
+    {
+        "id": "https://gizmodo.com/airpods-might-get-a-big-dose-of-ai-2000700184",
+        "title": "AirPods Might Get a Big Dose of AI",
+        "link": "https://gizmodo.com/airpods-might-get-a-big-dose-of-ai-2000700184",
+        "published": "Tue, 16 Dec 2025 16:50:27 +0000",
+        "source": "Gizmodo",
+        "summary": "A leaked iPhone prototype is giving some insight into future feature AirPods features."
+    },
+    {
+        "id": "https://gizmodo.com/the-worst-thing-about-the-ram-shortage-that-nobodys-talking-about-2000700185",
+        "title": "The Worst Thing About the RAM Shortage That Nobody\u2019s Talking About",
+        "link": "https://gizmodo.com/the-worst-thing-about-the-ram-shortage-that-nobodys-talking-about-2000700185",
+        "published": "Tue, 16 Dec 2025 16:40:49 +0000",
+        "source": "Gizmodo",
+        "summary": "No matter what, consumers are going to lose."
+    },
+    {
+        "id": "https://gizmodo.com/one-of-the-most-complete-human-ancestors-ever-found-isnt-who-we-thought-it-was-2000700181",
+        "title": "One of the Most Complete Human Ancestors Ever Found Isn\u2019t Who We Thought It Was",
+        "link": "https://gizmodo.com/one-of-the-most-complete-human-ancestors-ever-found-isnt-who-we-thought-it-was-2000700181",
+        "published": "Tue, 16 Dec 2025 16:30:05 +0000",
+        "source": "Gizmodo",
+        "summary": "New research challenges the previous identification of a famous fossil dubbed \"Little Foot.\""
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-shark-robot-vacuum-mop-combo-deal",
+        "title": "Keep a cleaner house for less work with $100 off the Shark Robot Vacuum and Mop Combo",
+        "link": "https://mashable.com/article/dec-16-shark-robot-vacuum-mop-combo-deal",
+        "published": "Tue, 16 Dec 2025 17:07:58 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 16, get the Shark Robot Vacuum and Mop Combo for $100 off."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-anker-solix-f2000-deal",
+        "title": "The Anker Solix F2000 portable power station is on sale at Amazon for under $850, which is almost 60% off",
+        "link": "https://mashable.com/article/dec-16-anker-solix-f2000-deal",
+        "published": "Tue, 16 Dec 2025 17:03:51 +0000",
+        "source": "Mashable",
+        "summary": "The Anker Solix F2000 portable power station is on sale at Amazon for $849, down from the list price of $1,999. That's a 58% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-tcl-t7-qled-tv-deal",
+        "title": "Need a new TV? This TCL 85-inch QLED model from 2025 is $400 off.",
+        "link": "https://mashable.com/article/dec-16-tcl-t7-qled-tv-deal",
+        "published": "Tue, 16 Dec 2025 17:01:00 +0000",
+        "source": "Mashable",
+        "summary": "The TCL 85-inch T7 QLED 4K TV is on sale for just under $1,000 at Amazon. Shop now and take nearly 30% off."
+    },
+    {
+        "id": "https://mashable.com/article/the-housemaid-review-sydney-sweeney",
+        "title": "The Housemaid review: Bad. Like bad bad. Not fun bad.",
+        "link": "https://mashable.com/article/the-housemaid-review-sydney-sweeney",
+        "published": "Tue, 16 Dec 2025 17:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Paul Feig directs this tortured adaptation of Freida McFadden's trashy novel."
+    },
+    {
+        "id": "https://mashable.com/article/stephanie-valentine-glamzilla-tiktok-beauty-award",
+        "title": "How Glamzilla built a beauty empire by staying true to her formula",
+        "link": "https://mashable.com/article/stephanie-valentine-glamzilla-tiktok-beauty-award",
+        "published": "Tue, 16 Dec 2025 17:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Stephanie Valentine glamzilla opens up about inspiration, beauty, and why community, not virality, is at the heart of her content."
+    },
+    {
+        "id": "https://readwrite.com/joi-gaming-fined-e400000-ksa-violating-role-model-ban/",
+        "title": "JOI Gaming fined massive \u20ac400,000 by Ksa for \u2018violating role model ban\u2019",
+        "link": "https://readwrite.com/joi-gaming-fined-e400000-ksa-violating-role-model-ban/",
+        "published": "Tue, 16 Dec 2025 15:45:45 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A close-up photograph of the Netherlands flag waving. JOI Gaming fined massive \u20ac400,000 by Ksa for &#039;violating role model ban&#039;\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/JOI-Gaming-fined-massive-E400000-by-Ksa-for-violating-role-model-ban-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The gaming regulator in the Netherlands, Kansspelautoriteit (Ksa)"
+    },
+    {
+        "id": "https://alpr.watch/",
+        "title": "Track Surveillance (Flock Cameras) Tech in Local Government Meetings",
+        "link": "https://alpr.watch/",
+        "published": "Tue, 16 Dec 2025 16:54:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46290916\">Comments</a>"
+    },
+    {
+        "id": "https://blog.mozilla.org/en/mozilla/leadership/mozillas-next-chapter-anthony-enzor-demeo-new-ceo/",
+        "title": "Mozilla appoints new CEO Anthony Enzor-Demeo",
+        "link": "https://blog.mozilla.org/en/mozilla/leadership/mozillas-next-chapter-anthony-enzor-demeo-new-ceo/",
+        "published": "Tue, 16 Dec 2025 13:53:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46288491\">Comments</a>"
     }
 ]
